[tool.poetry]
name = "aws-user-keys-report"
version = "0.1.0"
description = "Find all users with obsolete access keys"
authors = ["Dominik Pawlak <dominik_pawlak@poczta.fm>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
